--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -8,6 +8,15 @@ h1 {
   font-size: 50px;
   color: white;
 }
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+}
+p {
+  font-size: 21px;
+  color: gray;
+}
 
 .download {
   color: aquamarine;
